# fastapi-limiter

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
examples/: main.py  main_disabled.py  middleware.py
fastapi_limiter/: __init__.py  callback.py  constants.py  decorators.py  depends.py  identifier.py  middleware.py  utils.py
tests/: test_depends.py  test_driver_info.py  test_limiter.py  test_skip.py
