[tool.poetry]
authors = ["long2ice <long2ice@gmail.com>"]
description = "A request rate limiter for fastapi"
documentation = "https://github.com/long2ice/fastapi-limiter"
homepage = "https://github.com/long2ice/fastapi-limiter"
include = ["CHANGELOG.md", "LICENSE", "README.md"]
keywords = ["fastapi", "limiter"]
license = "Apache2.0"
name = "fastapi-limiter"
packages = [
    { include = "fastapi_limiter" },
]
readme = "README.md"
repository = "https://github.com/long2ice/fastapi-limiter.git"
version = "0.1.6"

[tool.poetry.dependencies]
redis = ">=4.2.0rc1"
fastapi = "*"
python = "^3.7"

[tool.poetry.group.dev.dependencies]
uvicorn = "*"
bandit = "*"
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-xdist = "*"
requests = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
