[project]
name = "fastapi-limiter"
version = "0.2.0"
description = "A request rate limiter for fastapi"
authors = [{ name = "long2ice", email = "long2ice@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = ["fastapi", "limiter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["fastapi", "pyrate-limiter>=3.9.0"]

[project.urls]
Homepage = "https://github.com/long2ice/fastapi-limiter"
Repository = "https://github.com/long2ice/fastapi-limiter.git"
Documentation = "https://github.com/long2ice/fastapi-limiter"

[dependency-groups]
dev = [
    "uvicorn",
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "requests",
    "httpx",
]

[tool.uv.build-backend]
module-name = ["fastapi_limiter"]
module-root = ""
source-include = ["CHANGELOG.md", "LICENSE", "README.md"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
